--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
   </properties>
 
   <dependencies>
-    
+    	<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-core</artifactId>
+			<version>1.2.4</version>
+		</dependency>
   </dependencies>
 </project>
