--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,10 @@
 			<artifactId>cucumber-core</artifactId>
 			<version>1.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-jvm-deps</artifactId>
+			<version>1.0.5</version>
+		</dependency>
   </dependencies>
 </project>
